packages/rust_net/lib/rust_net_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/rust_net.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class RustNetBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  RustNetBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  RustNetBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int rust_net_client_create(
    ffi.Pointer<ffi.Char> config_json,
  ) {
    return _rust_net_client_create(
      config_json,
    );
  }

  late final _rust_net_client_createPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Char>)>>(
          'rust_net_client_create');
  late final _rust_net_client_create = _rust_net_client_createPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int rust_net_client_execute_async(
    int client_id,
    int request_id,
    ffi.Pointer<ffi.Char> request_json,
    ffi.Pointer<ffi.Uint8> body_ptr,
    int body_len,
    RustNetExecuteCallback callback,
  ) {
    return _rust_net_client_execute_async(
      client_id,
      request_id,
      request_json,
      body_ptr,
      body_len,
      callback,
    );
  }

  late final _rust_net_client_execute_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              ffi.Uint64,
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr,
              RustNetExecuteCallback)>>('rust_net_client_execute_async');
  late final _rust_net_client_execute_async =
      _rust_net_client_execute_asyncPtr.asFunction<
          int Function(int, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>,
              int, RustNetExecuteCallback)>();

  ffi.Pointer<RustNetBinaryResult> rust_net_client_execute_binary(
    int client_id,
    ffi.Pointer<ffi.Char> request_json,
    ffi.Pointer<ffi.Uint8> body_ptr,
    int body_len,
  ) {
    return _rust_net_client_execute_binary(
      client_id,
      request_json,
      body_ptr,
      body_len,
    );
  }

  late final _rust_net_client_execute_binaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<RustNetBinaryResult> Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('rust_net_client_execute_binary');
  late final _rust_net_client_execute_binary =
      _rust_net_client_execute_binaryPtr.asFunction<
          ffi.Pointer<RustNetBinaryResult> Function(
              int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint8>, int)>();

  void rust_net_client_close(
    int client_id,
  ) {
    return _rust_net_client_close(
      client_id,
    );
  }

  late final _rust_net_client_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint64)>>(
          'rust_net_client_close');
  late final _rust_net_client_close =
      _rust_net_client_closePtr.asFunction<void Function(int)>();

  void rust_net_binary_result_free(
    ffi.Pointer<RustNetBinaryResult> value,
  ) {
    return _rust_net_binary_result_free(
      value,
    );
  }

  late final _rust_net_binary_result_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<RustNetBinaryResult>)>>(
      'rust_net_binary_result_free');
  late final _rust_net_binary_result_free = _rust_net_binary_result_freePtr
      .asFunction<void Function(ffi.Pointer<RustNetBinaryResult>)>();
}

final class RustNetBinaryResult extends ffi.Struct {
  @ffi.Uint8()
  external int is_success;

  @ffi.Uint16()
  external int status_code;

  external ffi.Pointer<ffi.Char> headers_json;

  external ffi.Pointer<ffi.Char> final_url;

  external ffi.Pointer<ffi.Uint8> body_ptr;

  @ffi.UintPtr()
  external int body_len;

  external ffi.Pointer<ffi.Char> error_json;
}

typedef RustNetExecuteCallback
    = ffi.Pointer<ffi.NativeFunction<RustNetExecuteCallbackFunction>>;
typedef RustNetExecuteCallbackFunction = ffi.Void Function(
    ffi.Uint64 request_id, ffi.Pointer<RustNetBinaryResult> result);
typedef DartRustNetExecuteCallbackFunction = void Function(
    int request_id, ffi.Pointer<RustNetBinaryResult> result);
